Bug fixed: When a row of three columns has a shorter middle column, creating new lines at the middle column would shift the bottom right handle upwards because of the height of inner content of contenteditable not matching the element height

--- a/assets/index.css
+++ b/assets/index.css
@@ -46,6 +46,7 @@ body {
     border: 1px solid black;
     overflow: hidden;
     position: relative;
+    display: table;
 }
 
 .page-controls {
